--- a/src/Inventory.App/Inventory.App.csproj
+++ b/src/Inventory.App/Inventory.App.csproj
@@ -356,6 +356,12 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>3.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Data.Sqlite.Core">
       <Version>3.1.3</Version>
     </PackageReference>
@@ -374,6 +380,10 @@
     <PackageReference Include="Remotion.Linq">
       <Version>2.2.0</Version>
     </PackageReference>
+	<PackageReference Include="SQLitePCLRaw.bundle_green">
+      <Version>2.0.2</Version>
+      <ExcludeAssets>All</ExcludeAssets>
+	</PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher">
       <Version>2.0.2</Version>
     </PackageReference>
