--- a/src/Inventory.ViewModels/Inventory.ViewModels.csproj
+++ b/src/Inventory.ViewModels/Inventory.ViewModels.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Inventory.Data\Inventory.Data.csproj" />
   </ItemGroup>
 
