--- a/src/Inventory.App/Inventory.App.csproj
+++ b/src/Inventory.App/Inventory.App.csproj
@@ -17,8 +17,9 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>VanArsdel.Inventory_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>91cbf304e6e8f9aaf611520a2eb86fb58dc63e93</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>
+    </PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>91CBF304E6E8F9AAF611520A2EB86FB58DC63E93</PackageCertificateThumbprint>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86</AppxBundlePlatforms>
@@ -380,10 +381,10 @@
     <PackageReference Include="Remotion.Linq">
       <Version>2.2.0</Version>
     </PackageReference>
-	<PackageReference Include="SQLitePCLRaw.bundle_green">
+    <PackageReference Include="SQLitePCLRaw.bundle_green">
       <Version>2.0.2</Version>
       <ExcludeAssets>All</ExcludeAssets>
-	</PackageReference>
+    </PackageReference>
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlcipher">
       <Version>2.0.2</Version>
     </PackageReference>
